# home_control

./: .gitmodules  CMakeLists.txt  README.md
appl/: CMakeLists.txt
appl/home_control_app/: CMakeLists.txt
appl/home_control_app/source/: home_data_provider.cpp  main.cpp
home_control_app/include/: home_data_provider.h
home_control_lib/: CMakeLists.txt
home_control_lib/include/: home_data.h  home_data_json_builder.h  home_data_request_processor.h  home_data_thread.h  home_server.h  ihome_data_json_builder.h  ihome_data_provider.h  itemperature_humidity_sensor.h  repeat_invoker.h  request_processor.h  temperature_humidity_sensor.h  temperature_humidity_updater.h
home_control_lib/source/: home_data_json_builder.cpp  home_data_request_processor.cpp  home_data_thread.cpp  home_server.cpp  repeat_invoker.cpp  temperature_humidity_updater.cpp
home_control_lib_tests/: CMakeLists.txt
home_control_lib_tests/source/: home_data_test.cpp  repeat_invoker_test.cpp  temperature_humidity_sensor_test.cpp  temperature_humidity_updater_test.cpp
tests/: CMakeLists.txt  home_control_lib
tests/home_control_lib_tests/: CMakeLists.txt
tests/home_control_lib_tests/mocks/: mock_home_data_provider.h  mock_json_builder.h  mock_request_processor.h  mock_sensor_impl.h  mock_temperature_humidity_sensor.h
tests/home_control_lib_tests/source/: home_data_json_builder_test.cpp  home_data_request_processor_test.cpp  home_data_test.cpp  home_server_test.cpp  repeat_invoker_test.cpp  request_processor_test.cpp  temperature_humidity_sensor_test.cpp  temperature_humidity_updater_test.cpp
